jarapp.properties one variable changed.
The variable 'app' removed and two new variables 'appDir' and 'appDirID' added.

--- a/jarapp.properties
+++ b/jarapp.properties
@@ -1,4 +1,5 @@
-app=FMRadio
+appDir=FMRadio
+appDirID=100
 streamGraphName=FMRadioCore
 username=sumanan
 mainclasspath=edu.mit.streamjit.test.DistAppRunner
