Ant script's variable numOfSNs removed.SNList added

--- a/jarapp.properties
+++ b/jarapp.properties
@@ -3,5 +3,5 @@ appDirID=100
 streamGraphName=FMRadioCore
 username=sumanan
 mainclasspath=edu.mit.streamjit.test.DistAppRunner
-numOfSNs=2
+SNList=2,4,6,8,10
 branch=seam
